<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calculate_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bmiText"
        android:layout_width="214dp"
        android:layout_height="101dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/calculate_bmi"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <TextView
        android:id="@+id/heightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="116dp"
        android:layout_marginBottom="2dp"
        android:text="@string/height"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/sliderHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmiText"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/heightNumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:text="1.5"
        app:layout_constraintBaseline_toBaselineOf="@+id/heightText"
        app:layout_constraintEnd_toStartOf="@+id/meterText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/heightText" />

    <TextView
        android:id="@+id/meterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/meters"
        app:layout_constraintBaseline_toBaselineOf="@+id/heightNumText"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/sliderHeight"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="8dp"
        android:value="1.5"
        android:valueFrom="0.0"
        android:valueTo="3.0"
        app:layout_constraintBottom_toTopOf="@+id/sliderWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmiText"
        app:layout_constraintVertical_bias="0.591" />

    <TextView
        android:id="@+id/weightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/weight"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/sliderWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sliderHeight"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/weightNumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="268dp"
        android:text="100"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightText"
        app:layout_constraintEnd_toStartOf="@+id/kgText"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/weightText" />

    <TextView
        android:id="@+id/kgText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/kilogram"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightNumText"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/sliderWeight"
        style="@style/Theme.App"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="44dp"
        android:value="100"
        android:valueFrom="0"
        android:valueTo="200"
        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>